--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.example.app",
 	"appName": "HerbalHomeRemedies2",
-	"webDir": "dist",
+	"webDir": "public",
 	"bundledWebRuntime": false
 }
