--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@capacitor/android": "^3.3.2",
+    "@capacitor/android": "3.5.1",
     "@capacitor/app": "1.0.6",
-    "@capacitor/core": "^3.3.2",
+    "@capacitor/core": "^3.5.1",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
@@ -20,11 +20,13 @@
     "@ionic/vue-router": "^5.4.0",
     "@types/node": "^16.11.11",
     "core-js": "^3.6.5",
+    "ng2-search-filter": "^0.5.1",
+    "save": "^2.4.0",
     "vue": "^3.2.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@capacitor/cli": "^3.3.2",
+    "@capacitor/cli": "^3.5.1",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
